// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pds thread views fetches ancestors 1`] = `
Object {
  "$type": "app.bsky.feed.getPostThread#post",
  "author": Object {
    "declaration": Object {
      "actorType": "app.bsky.system.actorUser",
      "cid": "cids(1)",
    },
    "did": "user(0)",
    "displayName": "ali",
    "handle": "alice.test",
  },
  "cid": "cids(0)",
  "downvoteCount": 0,
  "indexedAt": "1970-01-01T00:00:00.000Z",
  "myState": Object {
    "repost": "record(4)",
  },
  "parent": Object {
    "$type": "app.bsky.feed.getPostThread#post",
    "author": Object {
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(1)",
      },
      "did": "user(1)",
      "displayName": "bobby",
      "handle": "bob.test",
    },
    "cid": "cids(3)",
    "downvoteCount": 0,
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "myState": Object {},
    "parent": Object {
      "$type": "app.bsky.feed.getPostThread#post",
      "author": Object {
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
      },
      "cid": "cids(2)",
      "downvoteCount": 1,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "myState": Object {
        "upvote": "record(3)",
      },
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "text": "again",
      },
      "replyCount": 2,
      "repostCount": 1,
      "upvoteCount": 2,
      "uri": "record(1)",
    },
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": Object {
        "parent": Object {
          "cid": "cids(2)",
          "uri": "record(1)",
        },
        "root": Object {
          "cid": "cids(2)",
          "uri": "record(1)",
        },
      },
      "text": "hear that",
    },
    "replyCount": 1,
    "repostCount": 0,
    "upvoteCount": 0,
    "uri": "record(2)",
  },
  "record": Object {
    "$type": "app.bsky.feed.post",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "reply": Object {
      "parent": Object {
        "cid": "cids(3)",
        "uri": "record(2)",
      },
      "root": Object {
        "cid": "cids(2)",
        "uri": "record(1)",
      },
    },
    "text": "thanks bob",
  },
  "replies": Array [],
  "replyCount": 0,
  "repostCount": 1,
  "upvoteCount": 0,
  "uri": "record(0)",
}
`;

exports[`pds thread views fetches deep post thread 1`] = `
Object {
  "$type": "app.bsky.feed.getPostThread#post",
  "author": Object {
    "declaration": Object {
      "actorType": "app.bsky.system.actorUser",
      "cid": "cids(1)",
    },
    "did": "user(0)",
    "displayName": "ali",
    "handle": "alice.test",
  },
  "cid": "cids(0)",
  "downvoteCount": 1,
  "indexedAt": "1970-01-01T00:00:00.000Z",
  "myState": Object {
    "upvote": "record(1)",
  },
  "record": Object {
    "$type": "app.bsky.feed.post",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "text": "again",
  },
  "replies": Array [
    Object {
      "$type": "app.bsky.feed.getPostThread#post",
      "author": Object {
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(1)",
        "handle": "carol.test",
      },
      "cid": "cids(2)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "myState": Object {},
      "parent": Object {
        "$type": "app.bsky.feed.getPostThread#post",
        "author": Object {
          "declaration": Object {
            "actorType": "app.bsky.system.actorUser",
            "cid": "cids(1)",
          },
          "did": "user(0)",
          "displayName": "ali",
          "handle": "alice.test",
        },
        "cid": "cids(0)",
        "downvoteCount": 1,
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "myState": Object {
          "upvote": "record(1)",
        },
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "again",
        },
        "replyCount": 2,
        "repostCount": 1,
        "upvoteCount": 2,
        "uri": "record(0)",
      },
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "reply": Object {
          "parent": Object {
            "cid": "cids(0)",
            "uri": "record(0)",
          },
          "root": Object {
            "cid": "cids(0)",
            "uri": "record(0)",
          },
        },
        "text": "of course",
      },
      "replies": Array [],
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(2)",
    },
    Object {
      "$type": "app.bsky.feed.getPostThread#post",
      "author": Object {
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(2)",
        "displayName": "bobby",
        "handle": "bob.test",
      },
      "cid": "cids(3)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "myState": Object {},
      "parent": Object {
        "$type": "app.bsky.feed.getPostThread#post",
        "author": Object {
          "declaration": Object {
            "actorType": "app.bsky.system.actorUser",
            "cid": "cids(1)",
          },
          "did": "user(0)",
          "displayName": "ali",
          "handle": "alice.test",
        },
        "cid": "cids(0)",
        "downvoteCount": 1,
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "myState": Object {
          "upvote": "record(1)",
        },
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "again",
        },
        "replyCount": 2,
        "repostCount": 1,
        "upvoteCount": 2,
        "uri": "record(0)",
      },
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "reply": Object {
          "parent": Object {
            "cid": "cids(0)",
            "uri": "record(0)",
          },
          "root": Object {
            "cid": "cids(0)",
            "uri": "record(0)",
          },
        },
        "text": "hear that",
      },
      "replies": Array [
        Object {
          "$type": "app.bsky.feed.getPostThread#post",
          "author": Object {
            "declaration": Object {
              "actorType": "app.bsky.system.actorUser",
              "cid": "cids(1)",
            },
            "did": "user(0)",
            "displayName": "ali",
            "handle": "alice.test",
          },
          "cid": "cids(4)",
          "downvoteCount": 0,
          "indexedAt": "1970-01-01T00:00:00.000Z",
          "myState": Object {
            "repost": "record(5)",
          },
          "parent": Object {
            "$type": "app.bsky.feed.getPostThread#post",
            "author": Object {
              "declaration": Object {
                "actorType": "app.bsky.system.actorUser",
                "cid": "cids(1)",
              },
              "did": "user(2)",
              "displayName": "bobby",
              "handle": "bob.test",
            },
            "cid": "cids(3)",
            "downvoteCount": 0,
            "indexedAt": "1970-01-01T00:00:00.000Z",
            "myState": Object {},
            "parent": Object {
              "$type": "app.bsky.feed.getPostThread#post",
              "author": Object {
                "declaration": Object {
                  "actorType": "app.bsky.system.actorUser",
                  "cid": "cids(1)",
                },
                "did": "user(0)",
                "displayName": "ali",
                "handle": "alice.test",
              },
              "cid": "cids(0)",
              "downvoteCount": 1,
              "indexedAt": "1970-01-01T00:00:00.000Z",
              "myState": Object {
                "upvote": "record(1)",
              },
              "record": Object {
                "$type": "app.bsky.feed.post",
                "createdAt": "1970-01-01T00:00:00.000Z",
                "text": "again",
              },
              "replyCount": 2,
              "repostCount": 1,
              "upvoteCount": 2,
              "uri": "record(0)",
            },
            "record": Object {
              "$type": "app.bsky.feed.post",
              "createdAt": "1970-01-01T00:00:00.000Z",
              "reply": Object {
                "parent": Object {
                  "cid": "cids(0)",
                  "uri": "record(0)",
                },
                "root": Object {
                  "cid": "cids(0)",
                  "uri": "record(0)",
                },
              },
              "text": "hear that",
            },
            "replyCount": 1,
            "repostCount": 0,
            "upvoteCount": 0,
            "uri": "record(3)",
          },
          "record": Object {
            "$type": "app.bsky.feed.post",
            "createdAt": "1970-01-01T00:00:00.000Z",
            "reply": Object {
              "parent": Object {
                "cid": "cids(3)",
                "uri": "record(3)",
              },
              "root": Object {
                "cid": "cids(0)",
                "uri": "record(0)",
              },
            },
            "text": "thanks bob",
          },
          "replies": Array [],
          "replyCount": 0,
          "repostCount": 1,
          "upvoteCount": 0,
          "uri": "record(4)",
        },
      ],
      "replyCount": 1,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(3)",
    },
  ],
  "replyCount": 2,
  "repostCount": 1,
  "upvoteCount": 2,
  "uri": "record(0)",
}
`;

exports[`pds thread views fetches shallow post thread 1`] = `
Object {
  "$type": "app.bsky.feed.getPostThread#post",
  "author": Object {
    "declaration": Object {
      "actorType": "app.bsky.system.actorUser",
      "cid": "cids(1)",
    },
    "did": "user(0)",
    "displayName": "ali",
    "handle": "alice.test",
  },
  "cid": "cids(0)",
  "downvoteCount": 1,
  "indexedAt": "1970-01-01T00:00:00.000Z",
  "myState": Object {
    "upvote": "record(1)",
  },
  "record": Object {
    "$type": "app.bsky.feed.post",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "text": "again",
  },
  "replies": Array [
    Object {
      "$type": "app.bsky.feed.getPostThread#post",
      "author": Object {
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(1)",
        "handle": "carol.test",
      },
      "cid": "cids(2)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "myState": Object {},
      "parent": Object {
        "$type": "app.bsky.feed.getPostThread#post",
        "author": Object {
          "declaration": Object {
            "actorType": "app.bsky.system.actorUser",
            "cid": "cids(1)",
          },
          "did": "user(0)",
          "displayName": "ali",
          "handle": "alice.test",
        },
        "cid": "cids(0)",
        "downvoteCount": 1,
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "myState": Object {
          "upvote": "record(1)",
        },
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "again",
        },
        "replyCount": 2,
        "repostCount": 1,
        "upvoteCount": 2,
        "uri": "record(0)",
      },
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "reply": Object {
          "parent": Object {
            "cid": "cids(0)",
            "uri": "record(0)",
          },
          "root": Object {
            "cid": "cids(0)",
            "uri": "record(0)",
          },
        },
        "text": "of course",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(2)",
    },
    Object {
      "$type": "app.bsky.feed.getPostThread#post",
      "author": Object {
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(2)",
        "displayName": "bobby",
        "handle": "bob.test",
      },
      "cid": "cids(3)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "myState": Object {},
      "parent": Object {
        "$type": "app.bsky.feed.getPostThread#post",
        "author": Object {
          "declaration": Object {
            "actorType": "app.bsky.system.actorUser",
            "cid": "cids(1)",
          },
          "did": "user(0)",
          "displayName": "ali",
          "handle": "alice.test",
        },
        "cid": "cids(0)",
        "downvoteCount": 1,
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "myState": Object {
          "upvote": "record(1)",
        },
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "again",
        },
        "replyCount": 2,
        "repostCount": 1,
        "upvoteCount": 2,
        "uri": "record(0)",
      },
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "reply": Object {
          "parent": Object {
            "cid": "cids(0)",
            "uri": "record(0)",
          },
          "root": Object {
            "cid": "cids(0)",
            "uri": "record(0)",
          },
        },
        "text": "hear that",
      },
      "replyCount": 1,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(3)",
    },
  ],
  "replyCount": 2,
  "repostCount": 1,
  "upvoteCount": 2,
  "uri": "record(0)",
}
`;

exports[`pds thread views handles deleted posts correctly 1`] = `
Object {
  "$type": "app.bsky.feed.getPostThread#post",
  "author": Object {
    "declaration": Object {
      "actorType": "app.bsky.system.actorUser",
      "cid": "cids(1)",
    },
    "did": "user(0)",
    "displayName": "ali",
    "handle": "alice.test",
  },
  "cid": "cids(0)",
  "downvoteCount": 0,
  "indexedAt": "1970-01-01T00:00:00.000Z",
  "myState": Object {},
  "record": Object {
    "$type": "app.bsky.feed.post",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "text": "Deletion thread",
  },
  "replies": Array [
    Object {
      "$type": "app.bsky.feed.getPostThread#post",
      "author": Object {
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(1)",
        "displayName": "bobby",
        "handle": "bob.test",
      },
      "cid": "cids(2)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "myState": Object {},
      "parent": Object {
        "$type": "app.bsky.feed.getPostThread#post",
        "author": Object {
          "declaration": Object {
            "actorType": "app.bsky.system.actorUser",
            "cid": "cids(1)",
          },
          "did": "user(0)",
          "displayName": "ali",
          "handle": "alice.test",
        },
        "cid": "cids(0)",
        "downvoteCount": 0,
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "myState": Object {},
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "Deletion thread",
        },
        "replyCount": 1,
        "repostCount": 0,
        "upvoteCount": 0,
        "uri": "record(0)",
      },
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "reply": Object {
          "parent": Object {
            "cid": "cids(0)",
            "uri": "record(0)",
          },
          "root": Object {
            "cid": "cids(0)",
            "uri": "record(0)",
          },
        },
        "text": "Reply",
      },
      "replies": Array [
        Object {
          "$type": "app.bsky.feed.getPostThread#post",
          "author": Object {
            "declaration": Object {
              "actorType": "app.bsky.system.actorUser",
              "cid": "cids(1)",
            },
            "did": "user(0)",
            "displayName": "ali",
            "handle": "alice.test",
          },
          "cid": "cids(3)",
          "downvoteCount": 0,
          "indexedAt": "1970-01-01T00:00:00.000Z",
          "myState": Object {},
          "parent": Object {
            "$type": "app.bsky.feed.getPostThread#post",
            "author": Object {
              "declaration": Object {
                "actorType": "app.bsky.system.actorUser",
                "cid": "cids(1)",
              },
              "did": "user(1)",
              "displayName": "bobby",
              "handle": "bob.test",
            },
            "cid": "cids(2)",
            "downvoteCount": 0,
            "indexedAt": "1970-01-01T00:00:00.000Z",
            "myState": Object {},
            "parent": Object {
              "$type": "app.bsky.feed.getPostThread#post",
              "author": Object {
                "declaration": Object {
                  "actorType": "app.bsky.system.actorUser",
                  "cid": "cids(1)",
                },
                "did": "user(0)",
                "displayName": "ali",
                "handle": "alice.test",
              },
              "cid": "cids(0)",
              "downvoteCount": 0,
              "indexedAt": "1970-01-01T00:00:00.000Z",
              "myState": Object {},
              "record": Object {
                "$type": "app.bsky.feed.post",
                "createdAt": "1970-01-01T00:00:00.000Z",
                "text": "Deletion thread",
              },
              "replyCount": 1,
              "repostCount": 0,
              "upvoteCount": 0,
              "uri": "record(0)",
            },
            "record": Object {
              "$type": "app.bsky.feed.post",
              "createdAt": "1970-01-01T00:00:00.000Z",
              "reply": Object {
                "parent": Object {
                  "cid": "cids(0)",
                  "uri": "record(0)",
                },
                "root": Object {
                  "cid": "cids(0)",
                  "uri": "record(0)",
                },
              },
              "text": "Reply",
            },
            "replyCount": 1,
            "repostCount": 0,
            "upvoteCount": 0,
            "uri": "record(1)",
          },
          "record": Object {
            "$type": "app.bsky.feed.post",
            "createdAt": "1970-01-01T00:00:00.000Z",
            "reply": Object {
              "parent": Object {
                "cid": "cids(2)",
                "uri": "record(1)",
              },
              "root": Object {
                "cid": "cids(0)",
                "uri": "record(0)",
              },
            },
            "text": "Reply reply",
          },
          "replies": Array [],
          "replyCount": 0,
          "repostCount": 0,
          "upvoteCount": 0,
          "uri": "record(2)",
        },
      ],
      "replyCount": 1,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(1)",
    },
  ],
  "replyCount": 1,
  "repostCount": 0,
  "upvoteCount": 0,
  "uri": "record(0)",
}
`;

exports[`pds thread views handles deleted posts correctly 2`] = `
Object {
  "$type": "app.bsky.feed.getPostThread#post",
  "author": Object {
    "declaration": Object {
      "actorType": "app.bsky.system.actorUser",
      "cid": "cids(1)",
    },
    "did": "user(0)",
    "displayName": "ali",
    "handle": "alice.test",
  },
  "cid": "cids(0)",
  "downvoteCount": 0,
  "indexedAt": "1970-01-01T00:00:00.000Z",
  "myState": Object {},
  "record": Object {
    "$type": "app.bsky.feed.post",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "text": "Deletion thread",
  },
  "replies": Array [],
  "replyCount": 0,
  "repostCount": 0,
  "upvoteCount": 0,
  "uri": "record(0)",
}
`;

exports[`pds thread views handles deleted posts correctly 3`] = `
Object {
  "$type": "app.bsky.feed.getPostThread#post",
  "author": Object {
    "declaration": Object {
      "actorType": "app.bsky.system.actorUser",
      "cid": "cids(1)",
    },
    "did": "user(0)",
    "displayName": "ali",
    "handle": "alice.test",
  },
  "cid": "cids(0)",
  "downvoteCount": 0,
  "indexedAt": "1970-01-01T00:00:00.000Z",
  "myState": Object {},
  "parent": Object {
    "$type": "app.bsky.feed.getPostThread#notFoundPost",
    "notFound": true,
    "uri": "record(2)",
  },
  "record": Object {
    "$type": "app.bsky.feed.post",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "reply": Object {
      "parent": Object {
        "cid": "cids(3)",
        "uri": "record(2)",
      },
      "root": Object {
        "cid": "cids(2)",
        "uri": "record(1)",
      },
    },
    "text": "Reply reply",
  },
  "replies": Array [],
  "replyCount": 0,
  "repostCount": 0,
  "upvoteCount": 0,
  "uri": "record(0)",
}
`;
